Bug 677041: Fix control flow resolution for non-phi registers, and live interval generation edge cases. r=dvander